--- a/css/main.css
+++ b/css/main.css
@@ -43,5 +43,7 @@
          font-family: 'Trebuchet MS';
          display: inline-block;
      }
-     .nav a:hover {}
+     .nav a:hover {
+        text-decoration: underline; 
+     }
  }
