--- a/css/main.css
+++ b/css/main.css
@@ -1,49 +1,106 @@
- body {}
- 
- .nav ul {
-     list-style: none;
-     text-align: center;
-     padding: 0;
-     margin: 0;
- }
- 
- .nav li {
-     line-height: 40px;
-     height: 40px;
- }
- 
- .nav a {
-     text-decoration: none;
-     color: #000000;
-     display: block;
- }
- 
- .nav a:hover {}
- 
+@media screen and (min-width: 270px) {
+
+header {
+    background-color: #F2F2F2;
+    height: 200px;
+}
+
+.header-logo {
+    padding: 20px;
+}
+
+.menu {
+    display: inline-flex;
+    float: none;
+    width: 100%;
+}
+
+.menu li {
+     display: inline-flex;
+    float: none;
+    width: 100%;
+}
+
+.menu li,
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.menu img {
+    width: 80px;
+    vertical-align: middle;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  @media screen and (min-width: 600px) {
-     .header-logo {
-         height: 164px;
-         background-color: #F2F2F2;
-         border-width: 1px;
-         border-style: solid;
-         border-color: #F2F2F2;
-     }
-     .header-logo img {
-         padding: 20px;
-     }
-     .nav {
-         position: fixed;
-         top: 60px;
-         left: 250px;
-     }
-     .nav li {
-         width: 230px;
-         border-bottom: none;
-         font-size: 30px;
-         font-family: 'Trebuchet MS';
-         display: inline-block;
-     }
-     .nav a:hover {
-        text-decoration: underline; 
-     }
+    header {
+    background-color: #F2F2F2;
+    height: 200px;
+}
+
+.header-logo {
+    padding: 20px;
+}
+
+.menu {
+    position: fixed;
+    top: 30px;
+    text-align: center;
+    left: 70px;
+}
+
+.menu li {
+    width: 230px;
+    border-bottom: none;
+    font-size: 30px;
+    font-family: 'Trebuchet MS';
+    display: inline-block;
+}
+
+.menu li,
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.menu img {
+    width: 80px;
+    vertical-align: middle;
+}
+
  }
+
